// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query 1`] = `
Array [
  Object {
    "调": 1,
    "释": "",
    "音": "tʃoŋ",
  },
  Object {
    "调": 4,
    "释": "",
    "音": "tʃoŋ",
  },
]
`;

exports[`toneType: CSToneNo 1`] = `
Array [
  Object {
    "调": 6,
    "释": "出～",
    "音": "y",
  },
  Object {
    "调": 4,
    "释": "",
    "音": "ȵiɑ",
  },
]
`;

exports[`toneType: OctetToneNo 1`] = `
Array [
  Object {
    "调": 7,
    "释": "出～",
    "音": "y",
  },
  Object {
    "调": 5,
    "释": "",
    "音": "ȵiɑ",
  },
]
`;

exports[`toneType: ToneName 1`] = `
Array [
  Object {
    "调": "入声",
    "释": "出～",
    "音": "y",
  },
  Object {
    "调": "阴去",
    "释": "",
    "音": "ȵiɑ",
  },
]
`;

exports[`toneType: ToneValue 1`] = `
Array [
  Object {
    "调": 24,
    "释": "出～",
    "音": "y",
  },
  Object {
    "调": 55,
    "释": "",
    "音": "ȵiɑ",
  },
]
`;

exports[`toneType: XYZ 1`] = `
Array [
  Object {
    "调": 6,
    "释": "出～",
    "音": "y",
  },
  Object {
    "调": 4,
    "释": "",
    "音": "ȵiɑ",
  },
]
`;
